Correction erreur 'in-place'

--- a/src/config/config.yml
+++ b/src/config/config.yml
@@ -5,12 +5,13 @@ drug_type:
   - 'Cannabis'
 
 relations:
-  - http://www.stups.fr/ontologies/2023/stups/estProcheDe
+  - estProcheDe
 
 target_relations:
-  - http://www.stups.fr/ontologies/2023/stups/estProcheDe
+  - estProcheDe
 
 network:
-  - graph_db_host: "host.docker.internal"
+  graph_db_host: 127.0.0.1
+  graph_db_port: 7200
 
 # entities_limit: 1
