Retrieve features + correcting model

--- a/src/config/config.yml
+++ b/src/config/config.yml
@@ -1,14 +1,18 @@
 entities:
   - Echantillon
 
-drug_type:
-  - 'Cannabis'
+drug_type: Cannabis
 
 relations:
   - estProcheDe
 
 target_relations:
   - estProcheDe
+
+features:
+  Echantillon:
+    - epaisseur
+    - masse
 
 network:
   graph_db_host: 127.0.0.1
