Maj fonction de perte

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -2,6 +2,7 @@ FROM pytorch/pytorch
 
 RUN pip install torchvision
 RUN pip install SPARQLWrapper
+RUN pip install matplotlib
 
 RUN mkdir /pytorch
 
